--- a/Aura Drapes/.env
+++ b/Aura Drapes/.env
@@ -1,3 +1,1 @@
-VITE_API_URL=http://localhost:5000/api
-# VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
-# VITE_GTM_ID=GTM-XXXXXXX
+VITE_API_URL=https://aura-drapes-ecommerce-website-for-saree.onrender.com/api
